--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     container_name: postgres-spring-boot
     image: postgres:latest
     environment:
+      POSTGRES_DB: gambling
       POSTGRES_USER: amigoscode
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
