--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_DB: gambling
-      POSTGRES_USER: amigoscode
+      POSTGRES_USER: gambling
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
