--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring-boot
 spring.datasource.url=jdbc:postgresql://localhost:5332/gambling
-spring.datasource.username=amigoscode
+spring.datasource.username=gambling
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
